force-app/main/default/objects/FIN_Journalizing_Item__c/FIN_Journalizing_Item__c.object-meta.xml
<CustomObject>
    <label>Journalizing Item</label>
    <nameField>
        <displayFormat>JI-{0000000000}</displayFormat>
        <label>Journalizing Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journalizing Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>