force-app/main/default/objects/FIN_Journalizing_Item__c/fields/FIN_AccountNumberforJournal__c.field-meta.xml
<CustomField>
    <fullName>FIN_AccountNumberforJournal__c</fullName>
    <formula>FIN_Library_Association__r.FIN_Financial_Code__r.FIN_Business_Unit__r.Name 
+ &apos;.&apos; +
FIN_Library_Association__r.FIN_Financial_Code__r.FIN_Financial_Chart_of_Accounts__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Number for Journal</label>
    <type>Text</type>
</CustomField>