force-app/main/default/objects/FIN_Journalizing_Item__c/fields/FIN_AmountforJournal__c.field-meta.xml
<CustomField>
    <fullName>FIN_AmountforJournal__c</fullName>
    <formula>Payment_Distribution__r.FIN_DistributionAmountNetofTaxAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount for Journal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>