force-app/main/default/objects/FIN_Journalizing_Item__c/fields/FIN_CompanyforJournal__c.field-meta.xml
<CustomField>
    <fullName>FIN_CompanyforJournal__c</fullName>
    <formula>&apos;0&apos; +  FIN_Library_Association__r.FIN_Financial_Code__r.FIN_Company_Code__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company for Journal</label>
    <type>Text</type>
</CustomField>