force-app/main/default/objects/FIN_Journalizing_Item__c/fields/FIN_DocumentTypeforJournal__c.field-meta.xml
<CustomField>
    <fullName>FIN_DocumentTypeforJournal__c</fullName>
    <formula>&apos;JE&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Type for Journal</label>
    <type>Text</type>
</CustomField>