force-app/main/default/objects/FIN_Journalizing_Item__c/fields/FIN_EntryType__c.field-meta.xml
<CustomField>
    <fullName>FIN_EntryType__c</fullName>
    <label>Entry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Entry</fullName>
            </value>
            <value>
                <fullName>Manual Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>