force-app/main/default/objects/FIN_Journalizing_Item__c/fields/FIN_IndicatorforJournal__c.field-meta.xml
<CustomField>
    <fullName>FIN_IndicatorforJournal__c</fullName>
    <formula>&apos;N&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indicator for Journal</label>
    <type>Text</type>
</CustomField>