force-app/main/default/objects/FIN_Journalizing_Item__c/fields/FIN_JournalEntryAmount__c.field-meta.xml
<CustomField>
    <fullName>FIN_JournalEntryAmount__c</fullName>
    <label>Journal Entry Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>