force-app/main/default/objects/FIN_Journalizing_Item__c/fields/FIN_JournalEntrySign__c.field-meta.xml
<CustomField>
    <fullName>FIN_JournalEntrySign__c</fullName>
    <label>Journal Entry Sign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>