force-app/main/default/objects/FIN_Journalizing_Item__c/fields/FIN_LedgerTypeforJournal__c.field-meta.xml
<CustomField>
    <fullName>FIN_LedgerTypeforJournal__c</fullName>
    <formula>&apos;AA&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ledger Type for Journal</label>
    <type>Text</type>
</CustomField>