force-app/main/default/objects/FIN_Journalizing_Item__c/fields/FIN_Library_Association__c.field-meta.xml
<CustomField>
    <fullName>FIN_Library_Association__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Library Association</label>
    <referenceTo>SBQQ__ContractedPrice__c</referenceTo>
    <relationshipLabel>Journalizing Items</relationshipLabel>
    <relationshipName>Journalizing_Items</relationshipName>
    <type>Lookup</type>
</CustomField>