force-app/main/default/objects/FIN_Journalizing_Item__c/fields/FIN_Manual_Amount__c.field-meta.xml
<CustomField>
    <fullName>FIN_Manual_Amount__c</fullName>
    <label>Manual $ Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>