force-app/main/default/objects/FIN_Journalizing_Item__c/fields/FIN_Parent_Journalizing_Schedule__c.field-meta.xml
<CustomField>
    <fullName>FIN_Parent_Journalizing_Schedule__c</fullName>
    <label>Parent Journalizing Schedule</label>
    <referenceTo>Journalizing_Schedule__c</referenceTo>
    <relationshipLabel>Journalizing Items</relationshipLabel>
    <relationshipName>Journalizing_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>