force-app/main/default/objects/FIN_Journalizing_Item__c/fields/FIN_Payment__c.field-meta.xml
<CustomField>
    <fullName>FIN_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>FIN_Payment__c</referenceTo>
    <relationshipLabel>Journalizing Items</relationshipLabel>
    <relationshipName>Journalizing_Items</relationshipName>
    <type>Lookup</type>
</CustomField>