force-app/main/default/objects/FIN_Journalizing_Item__c/fields/Payment_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Payment_Distribution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Distribution</label>
    <referenceTo>FIN_PaymentDistribution__c</referenceTo>
    <relationshipLabel>Journalizing Items</relationshipLabel>
    <relationshipName>Journalizing_Items</relationshipName>
    <type>Lookup</type>
</CustomField>