force-app/main/default/objects/FIN_Journalizing_Item__c/recordTypes/II_Payments_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>II_Payments_Record_Type</fullName>
    <active>true</active>
    <label>II Payments Record Type</label>
</RecordType>