force-app/main/default/objects/FIN_Journalizing_Item__c/recordTypes/II_PDs_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>II_PDs_Record_Type</fullName>
    <active>true</active>
    <label>II PDs Record Type</label>
</RecordType>