force-app/main/default/objects/FIN_Journalizing_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FIN_Parent_Journalizing_Schedule__c</columns>
    <columns>FIN_Payment__c</columns>
    <columns>Payment_Distribution__c</columns>
    <columns>FIN_Library_Association__c</columns>
    <columns>FIN_Manual_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>